<resources>
    <string name="app_name">EL CORRAL</string>
    <string name="MiPerfil">Mi Perfil</string>
    <string name="Principal">Inicio</string>
    <string name="Usuario">Usuario</string>
    <string name="Contrasena">Password</string>
    <string name="Loggin">Loggin</string>
    <string name="noCuenta">¿No tiene una Cuenta?</string>
    <string name="Registrarse"> <u>Registrarse</u> </string>
    <string name="Correo"> Correo </string>
    <string name="aceptar"> Aceptar </string>
    <string name="cancelar"> Cancelar </string>
    <string name="faltan_datos">Faltan datos</string>
    <string name="PasswordNoCoincide">Password no coincide</string>
    <string name="incorrecto">Usuario o Password incorrecto</string>
    <string name="Productos">Menu</string>
    <string name="CerrarSesion">Cerrar Sesion</string>
    <string name="abierto">abierto</string>
    <string name="cerrado">cerrado</string>

    <!-- descripcion promociones-->
    <string name="corralisimaMediaLibra_promo">Media libra de carne de res asada a
        la parilla, con salsa BBQ.</string>
    <string name="corralisima_promo">Tres cuartos de libra canre de res asada a la
        parrila, con salsa BBQ.</string>
    <string name="brownieConHelado_promo">Con cobertura de chocolate o arequipe,
        acompañado de una bola de helado y hojuelas de chocolate.</string>
    <string name="anillosDeCebolla_promo">Crocantes anillos de cebolla apanados.</string>
    <string name="malteadaMediana_promo">Chocolate, Chocolate Ligtht, Frutos del Bosque
        Light, Macadamia, Café,Café Mocca, Fresa, Vainilla, Piña,Arequipe.
        Preparadas con helado super premium Von Glacet Para disfrutar con cuchara.</string>

    <!-- descripcion productos-->
    <string name="corralisima_descripcion">Tres cuartos de libra canre de res asada a la
        parrila, con salsa BBQ.</string>

    <string name="corralisimaCasera_descripcion">Un tercio de libra de carne de res, con queso
    americano, cebolla roja recien cortada, tomate y lechuga fresca</string>

    <string name="corralisimaTodoterreno_descripcion">Dos porciones de un cuarto de libra de carne
        de res asada a la parrilla, con tocineta, queso mozzarela, vegetales, pepinillos y salsa
        BBQ.</string>

    <string name="Vaquero_descripcion">Con queso mozzarella, tocineta, cebolla picada, papas chips
        tritutadas y salsas.</string>

    <string name="malteadaPequenna_descripcion">Chocolate, Chocolate Light, Frutos del bosque,
        macadamia, café, café mocca, fresa, vainilla, piña, arequipe. Preparadas con helado super
        premium von glacet. Para disfrutar con cuchara.</string>

    <string name="pie_descripcion">Crocante corteza de hojaldre rellena de deliciosa manzana o limnon.</string>

    <string name="papasEspiral_descripcion">Deliciosas papas en forma de espiral crujientes y frescas.</string>

    <string name="papasALaFrancesa_descripcion">Las papas más crocantes y deliciosas, para que armes
        tu menú como más te guste.</string>

    <string name="LomitosDePollo_descripcion">De pechuga de pollo apanados y servidos en 5 u 8
        unidades acompañados de miel mostaza.</string>


    <string name="Promociones">Promociones</string>
    <string name="hUsuario">Usuario</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Favorito">Favorito</string>
    <string name="Hamurguesas">Hamburguesas</string>

</resources>
