<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sebastianruiz.elcorral.RegistroActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="80sp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Usuario"
            android:id="@+id/Rusuario"
            android:textSize="18sp"
            android:gravity="center"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:gravity="center"
            android:hint="@string/Contrasena"
            android:inputType="textPassword"
            android:id="@+id/Rpassword"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:hint="@string/Contrasena"
            android:inputType="textPassword"
            android:gravity="center"
            android:id="@+id/Rrpassword"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:gravity="center"
            android:hint="@string/Correo"
            android:inputType="textEmailAddress"
            android:id="@+id/Rcorreo"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10sp">

       <LinearLayout
           android:layout_width="0dp"
           android:layout_weight="0.22"
           android:layout_height="wrap_content"></LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.66"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aceptar"
                android:textSize="18sp"
                android:gravity="center"
                android:id="@+id/RAceptar"
                android:background="@color/colorAmarillo_Corral"
                android:textColor="@color/white"
                android:onClick="Click" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancelar"
                android:textSize="18sp"
                android:gravity="center"
                android:id="@+id/RCancelar"
                android:background="@color/colorAmarillo_Corral"
                android:textColor="@color/white"
                android:layout_marginLeft="10sp"
                android:onClick="Click"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.22"
            android:layout_height="wrap_content"></LinearLayout>

    </LinearLayout>



</LinearLayout>
