<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".datosPerfil">


  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="0dp"
          android:layout_weight="0.44">

          <ImageView
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:src="@drawable/adduser"/>
      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="0dp"
          android:layout_weight="0.66"
          android:orientation="vertical">

          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textSize="18sp"
              android:id="@+id/PerfilUsuario"
              android:hint="@string/Usuario"
              android:gravity="center"
              android:layout_marginTop="30sp"/>

          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textSize="18sp"
              android:id="@+id/PerfilPasswors"
              android:hint="@string/Contrasena"
              android:gravity="center"/>


          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textSize="18sp"
              android:id="@+id/PerfilCorreo"
              android:hint="@string/Correo"
              android:gravity="center"/>
      </LinearLayout>
  </LinearLayout>

</FrameLayout>
